2005-12-22  Christian Stimming  <stimming@tuhh.de>

	* macros/g-wrap.m4: Copy macro file from gwrap-1.3.4 package
	because it is missing in the gwrap-1.9.x packages. May be removed
	if we switch to a different package detection code, potentially
	via pkgconfig, but for now copying this macro is the easiest
	solution.

2005-12-19  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.c: Andreas Köhler's patches to
	remember/restore maximized windows, and to shrink the size of the
	close button on notebook tabs.

2005-12-18  Christian Stimming  <stimming@tuhh.de>

	* src/report/standard-reports/*.scm: I18n string cleanup: Fix
	"(N_" for "(_" where applicable.

	* po/glossary/gnc-glossary.txt: Add explanation for trial balance.

2005-12-15  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-transfer.c: The amount of the
	online transfer somehow needs to be negated in the gnucash account
	now.

2005-12-10  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-model-account.c:
	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/gnome/glade/account.glade:
	* src/engine/Account.[ch]: David Jafferian's account deletion
	patch that queries the user about whether to delete or move any
	contained transactions and sub-accounts.

	* src/gnome-utils/dialog-utils.c: Fix the glade auto-connect code
	so it doesn't swap the callback arguments when an explicit
	"object" is provided to the callback.  (This is an unused code
	path that is about to be used.)

	* src/register/register-gnome/gnucash-grid.c: Andreas Köhler's
	patch to fix the alignment of cells in the register.

2005-12-09  Derek Atkins  <derek@ihtfp.com>

	* configure.in: g-wrap 1.9.6 can define the module-dir as
	  share/guile/site -- we want to make sure to get rid of
	  the /site when computing the libdir from this.  Otherwise
	  the runtime will fail to find the g-wrap runtime libraries.
	* src/gnome-utils/gnc-currency-edit.c: