@@ -1,3 +1,8 @@
+2005-12-23  David Hampton  <hampton@employees.org>
+
+	* src/gnome-utils/dialog-options.c: Translate strings for
+	multichoice options.
+
 2005-12-22  Christian Stimming  <stimming@tuhh.de>
 
 	* macros/g-wrap.m4: Copy macro file from gwrap-1.3.4 package
